fixed bug with quill white space,disabled rxjs-spy

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1295,7 +1295,6 @@ gv-quill-edit.gv-quill-mat-input-like {
 
     .ql-editor {
       padding: 0;
-      white-space: nowrap;
       overflow: hidden;
       border: 0;
       height: 21px;
